force-app/main/default/objects/Concession_Request__c/Concession_Request__c.object-meta.xml
<CustomObject>
    <label>Concession Request</label>
    <nameField>
        <displayFormat>CR-{YY}-{00000}</displayFormat>
        <label>Concession Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concession Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>