force-app/main/default/objects/Concession_Request__c/fields/Approved_Pct__c.field-meta.xml
<CustomField>
    <fullName>Approved_Pct__c</fullName>
    <label>Approved %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>