force-app/main/default/objects/Concession_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Concession Requests Approved</relationshipLabel>
    <relationshipName>Concession_Requests_Approved</relationshipName>
    <type>Lookup</type>
</CustomField>