force-app/main/default/objects/Concession_Request__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <label>Justification</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>