force-app/main/default/objects/Concession_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Concession Requests Raised</relationshipLabel>
    <relationshipName>Concession_Requests_Raised</relationshipName>
    <type>Lookup</type>
</CustomField>