force-app/main/default/objects/Concession_Request__c/fields/Requested_Pct__c.field-meta.xml
<CustomField>
    <fullName>Requested_Pct__c</fullName>
    <label>Requested %</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>