force-app/main/default/objects/Concession_Request__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Concession Requests</relationshipLabel>
    <relationshipName>Concession_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>